--- a/2.html
+++ b/2.html
@@ -1,175 +1,147 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>3D</title>
-		<style>
-			*{
-				margin: 0;
-				padding: 0;
-			}
-			/* body{
-				background-color: #000000;
-			} */
-			.wrap{
-				height: 200px;
-				margin-top: 150px;
-				/* 3、给爷爷加景深 */
-				perspective:1000px ;
-			}
-			.wrap .cube{
-				/* 2、父级相对定位 */
-				position: relative;
-				width: 12.5rem;
-				height: 12.5rem;
-				margin: 0 auto;
-				/* 4、爸爸加3d,因为最后旋转的是爸爸 */
-				transform-style: preserve-3d;
-				animation: box 10s linear infinite;
-				/* 5、在chrome开发者工具调试旋转父级查看效果 */
-				transform: rotateX(0deg) rotateY(0deg);
-			}
-			@keyframes box{
-				0%{transform: rotateX(0) rotateY(0) rotateZ(0deg);}
-				100%{transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);}
-			}
-			/* big box */
-			.wrap .cube div{
-				/*/2、自己为绝对定位相对于父级,把6个面盒子全部放进来 */
-				position: absolute;
-				top: 0;
-				left: 0;
-				/*/1、相对于父级100% */
-				width: 100%;
-				height: 100%;
-				border: 0px solid black;
-				font-size: 1.25rem;
-				color: white;
-				text-align: center;
-				line-height: 200px;
-				transition: transform .3s ease-in;
-			}
-			/* 5、调试出的参数 */
-			.wrap .cube .front{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: translateZ(100px);
-			}
-			.wrap .cube .back{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: translateZ(-100px) rotateY(180deg);
-			}
-			.wrap .cube .right{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: rotateY(90deg) translateZ(100px);
-			}
-			.wrap .cube .left{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: rotateY(-90deg) translateZ(100px);
-			}
-			.wrap .cube .top{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: rotateX(90deg) translateZ(100px);
-			}
-			.wrap .cube .bottom{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: rotateX(-90deg) translateZ(100px);
-			}
-		     /* 6、inner box*/
-			.wrap .cube i{
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				margin-top: -50px;
-				margin-left: -50px;
-				width: 100px;
-				height: 100px;
-				border: 1px solid black;
-			}
-.wrap .cube .ifront{
-				background:yellow;
-				background-size: auto 100%; 
-				transform: translateZ(50px);
-			}
-			.wrap .cube .iback{
-				background:red ;
-				background-size: auto 100%; 
-				transform: translateZ(-50px) rotateY(180deg);
-			}
-			.wrap .cube .iright{
-				background: orange;
-				background-size: auto 100%; 
-				transform: rotateY(90deg) translateZ(50px);
-			}
-			.wrap .cube .ileft{
-				background: blue;
-				background-size: auto 100%; 
-				transform: rotateY(-90deg) translateZ(50px);
-			}
-			.wrap .cube .itop{
-				background: purple;
-				background-size: auto 100%; 
-				transform: rotateX(90deg) translateZ(50px);
-			}
-			.wrap .cube .ibottom{
-				background: green;
-				background-size: auto 100%; 
-				transform: rotateX(-90deg) translateZ(50px);
-			}
-			/* 7、hover box */
-			.wrap .cube:hover .front{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: translateZ(200px);
-			}
-			.wrap .cube:hover .back{ 
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: translateZ(-200px) rotateY(180deg);
-			}
-			.wrap .cube:hover .right{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: rotateY(90deg) translateZ(200px);
-			}
-			.wrap .cube:hover .left{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: rotateY(-90deg) translateZ(200px);
-			}
-			.wrap .cube:hover .top{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: rotateX(90deg) translateZ(200px);
-			}
-			.wrap .cube:hover .bottom{
-				background-color: rgba(128, 128, 128, 0.5);
-				background-size: auto 100%; 
-				transform: rotateX(-90deg) translateZ(200px);
-			}
-		</style>
-	</head>
-	<body>
-		<div class="wrap">
-			<div class="cube">
-				<div class="front"></div>
-				<div class="back"></div>
-				<div class="right"></div>
-				<div class="left"></div>
-				<div class="top"></div>
-				<div class="bottom"></div>
-				<i class="ifront"></i>
-				<i class="iback"></i>
-				<i class="iright"></i>
-				<i class="ileft"></i>
-				<i class="itop"></i>
-				<i class="ibottom"></i>
-			</div>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<style>
+	@keyframes zhuan {
+		0%{
+			transform: rotateX(-30deg) rotateY(-50deg) rotateZ(-90deg)
+		}
+		100%{
+			transform: rotateX(30deg) rotateY(50deg) rotateZ(90deg)
+		}
+	}
+	.box{
+		width: 1000px;
+		height:1000px;
+		border: 1px solid;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		perspective: 1200px;/* 设置透视值 */
+	}
+	.box1{
+		width: 100%;
+		height: 100%;
+		transform-style: preserve-3d;/* 让子元素有3D变形效果 */
+		animation: zhuan 10s linear infinite;
+	}
+	.small {
+		width: 200px;
+		height: 200px;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		margin-left: -100px;
+		margin-top: -100px;
+		background:currentcolor;/* 背景颜色使用color颜色 */
+	}
+	.small1{
+		color:yellow;
+		transform: translateZ(100px);
+	}
+	.small2{
+		color:blue;
+		transform:rotateY(180deg) translateZ(100px);
+	}
+	.small3{
+		color:red;
+		transform:rotateY(270deg) translateZ(100px);
+	}
+	.small4{
+		color:green;
+		transform:rotateY(90deg) translateZ(100px);
+	}
+	.small5{
+		color:orange;
+		transform:rotateX(90deg) translateZ(100px);
+	}
+	.small6{
+		color:purple;
+		transform:rotateX(270deg) translateZ(100px);
+	}
+	.box:hover .small{
+		box-shadow: 0 0 20px currentcolor;
+	}
+	.big{
+		width: 400px;
+		height: 400px;
+		/* border: 1px solid; */
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		margin-left: -200px;
+		margin-top: -200px;
+		background: rgba(100, 100, 100, 0.3)
+	}
+	.big1{
+		color:yellow;
+		transform: translateZ(200px);
+	}
+	.big2{
+		color:blue;
+		transform:rotateY(180deg) translateZ(200px);
+	}
+	.big3{
+		color:red;
+		transform:rotateY(270deg) translateZ(200px);
+	}
+	.big4{
+		color:green;
+		transform:rotateY(90deg) translateZ(200px);
+	}
+	.big5{
+		color:orange;
+		transform:rotateX(90deg) translateZ(200px);
+	}
+	.big6{
+		color:purple;
+		transform:rotateX(270deg) translateZ(200px);
+	}
+	.box:hover .big1{
+		color:yellow;
+		transform: translateZ(200px);
+	}
+	.box:hover .big2{
+		color:blue;
+		transform:rotateY(180deg) translateZ(250px);
+	}
+	.box:hover .big3{
+		color:red;
+		transform:rotateY(270deg) translateZ(250px);
+	}
+	.box:hover .big4{
+		color:green;
+		transform:rotateY(90deg) translateZ(250px);
+	}
+	.box:hover .big5{
+		color:orange;
+		transform:rotateX(90deg) translateZ(250px);
+	}
+	.box:hover .big6{
+		color:purple;
+		transform:rotateX(270deg) translateZ(250px);
+	}
+	</style>
+</head>
+<body>
+	<div class="box">
+		<div class="box1">
+		  <div class="small small1"></div>
+		  <div class="small small2"></div>
+		  <div class="small small3"></div>
+		  <div class="small small4"></div>
+		  <div class="small small5"></div>
+		  <div class="small small6"></div>
+		  <div class="big big1"></div>
+		  <div class="big big2"></div>
+		  <div class="big big3"></div>
+		  <div class="big big4"></div>
+		  <div class="big big5"></div>
+		  <div class="big big6"></div>
 		</div>
-	</body>
+	</div>
+</body>
 </html>
